Fixed some issues with sidebars on mobile devices; added breadcrumb css for customer/public interface.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -484,7 +484,8 @@
         float: none;
     }
 
-    .DashboardActions .Actions li:after {
+    .DashboardActions .Actions li:after,
+    .Actions li:after {
         display: inline-block;
         float: none;
     }
