--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Default.css
@@ -437,4 +437,100 @@ form select.Error {
     width: 617px;
 }
 
+/**
+ * @subsection  Bread crumb
+ */
+
+.BreadCrumb {
+    list-style-type: none;
+    margin: 15px 0px;
+    padding: 10px;
+    background: #eee;
+    position: relative;
+    padding-left: 0px;
+    padding-right: 15px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.RTL .BreadCrumb {
+    padding-right: 10px;
+    padding-left: 15px;
+}
+
+.BreadCrumb li {
+    display: inline-block;
+    margin: 0px 2px 0px 2px;
+    padding-left: 35px;
+    color: #777;
+    position: relative;
+    max-width: 200px;
+    white-space: normal;
+    vertical-align: middle;
+}
+
+.BreadCrumb li:first-child {
+    padding-left: 20px;
+}
+
+.RTL .BreadCrumb li {
+    padding-left: 0px;
+    padding-right: 35px;
+}
+
+.BreadCrumb li:first-child:after,
+.BreadCrumb li:first-child:before {
+    display: none;
+}
+
+.BreadCrumb a {
+    color: #000;
+    padding: 0px 2px;
+}
+
+.BreadCrumb a:hover {
+    border-bottom: 2px solid #FF9922;
+}
+
+.BreadCrumb li:before,
+.BreadCrumb li:after {
+    top: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-width: 20px;
+    margin-top: -20px;
+}
+
+.BreadCrumb li:after {
+    left: 0px;
+    border-color: rgba(255, 255, 255, 0);
+    border-left-color: #fff;
+}
+
+.RTL .BreadCrumb li:after {
+    border-left-color: transparent;
+    border-right-color: #fff;
+    left: auto;
+    right: 0px;
+}
+
+.BreadCrumb li:before {
+    left: -5px;
+    border-color: rgba(238, 238, 238, 0);
+    border-left-color: #eee;
+    z-index: 2;
+}
+
+.RTL .BreadCrumb li:before {
+    left: auto;
+    right: -5px;
+    border-right-color: #eee;
+    border-left-color: transparent;
+}
+
+
 } /* end @media */
